Fix Alignment Issues of Design Selectors on Mobile

--- a/frontend/src/scss/designFormStyles.scss
+++ b/frontend/src/scss/designFormStyles.scss
@@ -17,7 +17,3 @@ button.navbar-toggler:hover {
 .max-container-size {
     max-width: 992px;
 }
-
-.design-selector {
-    max-width: 60px;
-}
